fixed container 1 and 2 spacing

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 
 *{
   margin: 0;
-
 }
 
 .header {
@@ -38,14 +37,14 @@
   background-size: 700px;
   }
 
-  .container-right img {
+.container-right img {
     height: 200px;
     width: 200px;
   }
 .container-left{
     height: 90vh;
     background-color: #d8d8d8;
-    width: 50vw;
+    width: 51vw;
     overflow: hidden;
 }
 .footer{
